#39 | Refactor CBAC to be sync of a general encounter