@@ -7,10 +7,10 @@ import org.avni_integration_service.amrit.service.AvniAmritErrorService;
 import org.avni_integration_service.amrit.service.BeneficiaryService;
 import org.avni_integration_service.amrit.service.BornBirthService;
 import org.avni_integration_service.amrit.service.CBACService;
-import org.avni_integration_service.avni.domain.Enrolment;
-import org.avni_integration_service.avni.domain.EnrolmentsResponse;
+import org.avni_integration_service.avni.domain.GeneralEncounter;
+import org.avni_integration_service.avni.domain.GeneralEncountersResponse;
 import org.avni_integration_service.avni.domain.Subject;
-import org.avni_integration_service.avni.repository.AvniEnrolmentRepository;
+import org.avni_integration_service.avni.repository.AvniEncounterRepository;
 import org.avni_integration_service.avni.repository.AvniSubjectRepository;
 import org.avni_integration_service.integration_data.domain.AvniEntityType;
 import org.avni_integration_service.integration_data.domain.IntegratingEntityStatus;
@@ -21,22 +21,24 @@ import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 
+import static org.avni_integration_service.amrit.config.BeneficiaryConstants.SUBJECT_TYPE;
+
 @Component
-public class AmritEnrolmentWorker implements ErrorRecordWorker {
-    private static final Logger logger = Logger.getLogger(AmritEnrolmentWorker.class);
+public class AmritEncounterWorker implements ErrorRecordWorker {
+    private static final Logger logger = Logger.getLogger(AmritEncounterWorker.class);
     private final BeneficiaryService beneficiaryService;
     private final BornBirthService bornBirthService;
     private final CBACService cBACService;
-    private final AvniEnrolmentRepository avniEnrolmentRepository;
+    private final AvniEncounterRepository avniEncounterRepository;
     private final AvniSubjectRepository avniSubjectRepository;
     private final IntegratingEntityStatusRepository integratingEntityStatusRepository;
     private final IntegratingEntityStatusService integratingEntityStatusService;
     private final AvniAmritErrorService avniAmritErrorService;
     private final AmritEntityType amritEntityType;
 
-    public AmritEnrolmentWorker(BeneficiaryService beneficiaryService,
+    public AmritEncounterWorker(BeneficiaryService beneficiaryService,
                                 BornBirthService bornBirthService, CBACService cBACService,
-                                AvniEnrolmentRepository avniEnrolmentRepository,
+                                AvniEncounterRepository avniEncounterRepository,
                                 IntegratingEntityStatusRepository integratingEntityStatusRepository,
                                 AvniSubjectRepository avniSubjectRepository,
                                 IntegratingEntityStatusService integratingEntityStatusService,
@@ -44,7 +46,7 @@ public class AmritEnrolmentWorker implements ErrorRecordWorker {
         this.beneficiaryService = beneficiaryService;
         this.bornBirthService = bornBirthService;
         this.cBACService = cBACService;
-        this.avniEnrolmentRepository = avniEnrolmentRepository;
+        this.avniEncounterRepository = avniEncounterRepository;
         this.integratingEntityStatusRepository = integratingEntityStatusRepository;
         this.avniSubjectRepository = avniSubjectRepository;
         this.integratingEntityStatusService = integratingEntityStatusService;
@@ -52,20 +54,21 @@ public class AmritEnrolmentWorker implements ErrorRecordWorker {
         this.amritEntityType = AmritEntityType.Beneficiary;
     }
 
-    public void syncEnrolmentsFromAvniToAmrit(AmritEntityType entityType) {
-        processEnrolments(entityType);
+    public void syncEncountersFromAvniToAmrit(AmritEntityType entityType) {
+        processEncounters(entityType);
     }
 
-    public void processEnrolments(AmritEntityType entityType) {
+    public void processEncounters(AmritEntityType entityType) {
         while (true) {
+            IntegratingEntityStatus beneficiarySyncStatus = integratingEntityStatusRepository.findByEntityType(entityType.name());
             IntegratingEntityStatus status = integratingEntityStatusRepository.findByEntityType(entityType.name());
-            EnrolmentsResponse response = avniEnrolmentRepository.getEnrolments(status.getReadUptoDateTime(), entityType.getDbName());
-            Enrolment[] generalEnrolments = response.getContent();
+            GeneralEncountersResponse response = avniEncounterRepository.getGeneralEncounters(status.getReadUptoDateTime(), entityType.getDbName());
+            GeneralEncounter[] generalEncounters = response.getContent();
             int totalPages = response.getTotalPages();
-            logger.info(String.format("Found %d generalEnrolments that are newer than %s", generalEnrolments.length, status.getReadUptoDateTime()));
-            if (generalEnrolments.length == 0) break;
-            for (Enrolment enrolment : generalEnrolments) {
-                processEnrolment(enrolment, true, entityType);
+            logger.info(String.format("Found %d generalEncounters that are newer than %s", generalEncounters.length, status.getReadUptoDateTime()));
+            if (generalEncounters.length == 0) break;
+            for (GeneralEncounter encounter : generalEncounters) {
+                processEncounter(encounter, true, entityType);
             }
             if (totalPages == 1) {
                 logger.info("Finished processing all pages");
@@ -75,57 +78,57 @@ public class AmritEnrolmentWorker implements ErrorRecordWorker {
     }
 
     @Transactional(propagation = Propagation.REQUIRES_NEW)
-    protected void processEnrolment(Enrolment enrolment, boolean updateSyncStatus, AmritEntityType entityType) {
-        logger.debug("%s Processing enrolment  %s".formatted(entityType, enrolment.getUuid()));
-        if (shouldFilterEnrolment(enrolment)) {
-            logger.warn(String.format("%s General enrolment should be filtered out: %s", entityType, enrolment.getUuid()));
-            updateSyncStatus(enrolment, updateSyncStatus, entityType);
+    protected void processEncounter(GeneralEncounter encounter, boolean updateSyncStatus, AmritEntityType entityType) {
+        logger.debug("%s Processing encounter  %s".formatted(entityType, encounter.getUuid()));
+        if (shouldFilterEncounter(encounter)) {
+            logger.warn(String.format("%s General encounter should be filtered out: %s", entityType, encounter.getUuid()));
+            updateSyncStatus(encounter, updateSyncStatus, entityType);
             return;
         }
 
-        Subject beneficiary = avniSubjectRepository.getSubject(enrolment.getSubjectId());
+        Subject beneficiary = avniSubjectRepository.getSubject(encounter.getSubjectId());
         logger.debug(String.format("Found avni beneficiary %s", beneficiary.getUuid()));
         if (beneficiary.getVoided()) {
             logger.debug(String.format("Avni beneficiary is voided. Skipping. %s", beneficiary.getUuid()));
-            updateSyncStatus(enrolment, updateSyncStatus, entityType);
+            updateSyncStatus(encounter, updateSyncStatus, entityType);
             return;
         }
 
-        if(entityType.equals(AmritEntityType.BornBirth)) {
-            bornBirthService.createOrUpdateBornBirth(beneficiary, enrolment);
+       if(entityType.equals(AmritEntityType.CBAC)) {
+            cBACService.createOrUpdateCBAC(beneficiary, encounter);
         } else {
-            throw new AssertionError(String.format("Cannot process Avni enrolment for entityType %s", entityType));
+            throw new AssertionError(String.format("Cannot process Avni encounter for entityType %s", entityType));
         }
 
-        updateSyncStatus(enrolment, updateSyncStatus, entityType);
+        updateSyncStatus(encounter, updateSyncStatus, entityType);
     }
 
-    private boolean shouldFilterEnrolment(Enrolment generalEnrolment) {
-        return !generalEnrolment.isExited() || generalEnrolment.getVoided();
+    private boolean shouldFilterEncounter(GeneralEncounter generalEncounter) {
+        return !generalEncounter.isCompleted() || generalEncounter.getVoided();
     }
 
-    private void updateSyncStatus(Enrolment enrolment, boolean updateSyncStatus, AmritEntityType entityType) {
-        if (updateSyncStatus) {//TODO check if getLastModifiedDate stored has valid time component and can be used in next sync
-            integratingEntityStatusService.saveEntityStatus(entityType.name(), enrolment.getLastModifiedDate());
+    private void updateSyncStatus(GeneralEncounter encounter, boolean updateSyncStatus, AmritEntityType entityType) {
+        if (updateSyncStatus) {
+            integratingEntityStatusService.saveEntityStatus(entityType.name(), encounter.getLastModifiedDate());
         }
     }
 
     @Override
     public void processError(ErrorRecord errorRecord) {
         String entityUuid = errorRecord.getEntityId();
-        Enrolment enrolment = avniEnrolmentRepository.getEnrolment(entityUuid);
-        if (enrolment == null) {
-            String message = String.format("%s enrolment has been deleted now: %s", errorRecord.getIntegratingEntityType(), entityUuid);
+        GeneralEncounter encounter = avniEncounterRepository.getGeneralEncounter(entityUuid);
+        if (encounter == null) {
+            String message = String.format("%s encounter has been deleted now: %s", errorRecord.getIntegratingEntityType(), entityUuid);
             logger.warn(message);
-            avniAmritErrorService.errorOccurred(entityUuid, AmritErrorType.EntityIsDeleted, AvniEntityType.Enrolment, message);
+            avniAmritErrorService.errorOccurred(entityUuid, AmritErrorType.EntityIsDeleted, AvniEntityType.GeneralEncounter, message);
             return;
         }
 
         if(errorRecord.getIntegratingEntityType() != null) {
             if(errorRecord.getIntegratingEntityType().equals(AmritEntityType.BornBirth.name())) {
-                processEnrolment(enrolment, false, AmritEntityType.BornBirth);
+                processEncounter(encounter, false, AmritEntityType.BornBirth);
             } else if(errorRecord.getIntegratingEntityType().equals(AmritEntityType.CBAC.name())) {
-                processEnrolment(enrolment, false, AmritEntityType.CBAC);
+                processEncounter(encounter, false, AmritEntityType.CBAC);
             } else {
                 throw new AssertionError(String.format("Cannot handle error record with AvniEntityType=%s / AmritEntityType=%s", errorRecord.getAvniEntityType(), errorRecord.getIntegratingEntityType()));
             }
